Migrate to MiniMessage + Orjus rebrand + parkour/social/UX overhaul
- MiniMessage-first text engine; project-wide replacement of legacy &/§ codes,
  no &f / pure white (project white is #FFF2E0).
- Full ConfigLib migration of every config; new ConfigReload registry drives /reload.
- Rebrand OVERDYN → Orjus (ᴏʀᴊᴜꜱ-ꜱᴛᴜᴅɪᴏ, purple #AE3AF3/#985DBC/#C58AF0 palette,
  Orjus social links, /kick screen, sidebar/tab/welcome/holograms).
- New server registry (servers.yml) + ServerConnector + per-server itemName/itemLore
  overrides; MenuItem gets server-id binding with live status refresh.
- NPCs gained entityType + scale — decorative mobs live in npcs.yml, no separate
  config; mode-selector NPC is a Warden (scale 1.15) that opens the menu on click.
- Welcome hologram folded into holograms.yml; HologramManager supports {online}
  with 5-second refresh; toggle items (music/sidebar/players) moved into
  join-items.yml.
- TAB: mspt removed, server state word + configurable timezone with (МСК) label;
  optional per-player timezone via IP (ip-api.com, opt-in toggle in settings).
- Parkour: defaults to Nether + Competitive; brief progress titles every 10
  points; competitive overtake chat messages; players return to their pre-parkour
  position (not spawn); settings persist across restarts.
- New /kick <player> [reason] command with branded disconnect screen.
- Per-char gradient artefact ("first letter brighter") collapsed into proper
  <gradient> everywhere (18 strings, 9 files).
- See AUDIT_2026-05-23.md for the full breakdown.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>